UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Bid_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Fees_WMT_Indirect__c</fullName>
        <label>Admin Fees (WMT Indirect)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand_WAC__c</fullName>
        <label>Brand WAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIP_Status_Internal_Use__c</fullName>
        <formula>Phoenix_Product__r.CIP_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIP Status (Internal Use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlled_Substance_Distribution_Co__c</fullName>
        <label>Ctrl Substance / Distribution / Cold Sto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_CVS_DeadNet__c</fullName>
        <label>Current CVS DeadNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_CVS_Indirect_DeadNet__c</fullName>
        <label>Current CVS Indirect DeadNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Cardinal_DeadNet__c</fullName>
        <label>Current Cardinal DeadNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Major_DeadNet__c</fullName>
        <label>Current Major DeadNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_VIP_Per_Unit__c</fullName>
        <formula>Phoenix_Customer_VIP__c * (Phoenix_Current_Price_Calc__c -Phoenix_Customer_Rebates1__c- Phoenix_Admin_Fee_in__c - Phoenix_Direct_CD_Per_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct VIP% Per Unit $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Exclusion_Customers__c</fullName>
        <label>Final Exclusion Customers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Current_Sales__c</fullName>
        <label>Finance Current Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indirect_TP__c</fullName>
        <formula>IF(OR(ISNULL(Phoenix_Indirect_Dead_Net__c ),Phoenix_Indirect_Dead_Net__c =0),0,
(Phoenix_Indirect_Dead_Net__c - Phoenix_Throughput_Cost1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect TP $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indirect_VIP_Per_Unit__c</fullName>
        <formula>(IF(
Phoenix_Wholesaler_Diff_Price_Indirect__c==0,
Phoenix_Current_Indirect_Price__c,
Phoenix_Wholesaler_Diff_Price_Indirect__c) - Phoenix_Proposed_ZITD__c - Phoenix_Admin_Fee_in__c - Phoenix_Direct_CD_Per_Unit__c - Phoenix_Customer_Rebates1__c)*Phoenix_Customer_VIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect VIP% Per Unit $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Partner_Product_Internal_Use__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_Is_partner_product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Partner Product (Internal Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Bid Line Items (Latest Line Item)</relationshipLabel>
        <relationshipName>Bid_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Listing_Price__c</fullName>
        <label>Listing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Lead_Notes__c</fullName>
        <label>Marketing_Lead_Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Lead__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_Marketing_Lead__r.FirstName+&apos; &apos;+Phoenix_Product__r.Phoenix_Marketing_Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Additional_Requirement__c</fullName>
        <description>This field only user for Monthly Additional Requirement  calculation</description>
        <formula>(Phoenix_Proposed_Direct_Selling_Unit__c +  Phoenix_Proposed_Indirect_Selling_Unit__c) / 12 - ( Phoenix_Total_Selling_Unit__c / 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Additional Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_12_Months_Actual_Sales__c</fullName>
        <label>12 Months Actual  Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_12_Months_IndirectSaleUnit__c</fullName>
        <label>12 Months IndirectSaleUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_12_Months_TotalSaleUnits__c</fullName>
        <label>12 Months TotalSaleUnits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_3_Months_Actual_Sales__c</fullName>
        <label>3 Months Actual Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ANDA_IOD_Overall_Amount__c</fullName>
        <label>ANDA IOD Overall Amount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_ANDA_IOD_Per_unit__c</fullName>
        <label>ANDA IOD Per unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Acquisition_Difference__c</fullName>
        <description>created for RXSS template</description>
        <label>Acquisition Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Additional_Rebate__c</fullName>
        <label>Additional Rebate $(Pharmagen)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Admin_Fee_Proposed_McK_OS_RAD__c</fullName>
        <formula>IF(Phoenix_Current_Admin_Fee__c &gt; 0,
Phoenix_Current_Admin_Fee__c ,Phoenix_Bid__r.Phoenix_Proposed_Value_Admin_Fee__c ) * IF(Phoenix_Proposed_McK_OS_And_RAD_NCP__c= 0 ,IF(Phoenix_Sales_Proposed_NCP_McK_And_RAD__c = 0 ,Phoenix_OS_RAD_NCP__c,Phoenix_Sales_Proposed_NCP_McK_And_RAD__c ),Phoenix_Proposed_McK_OS_And_RAD_NCP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Fee (Proposed McK OS + RAD)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Admin_Fee_WMT_Direct_NCP__c</fullName>
        <label>Admin Fee (WMT Direct NCP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Admin_Fee__c</fullName>
        <formula>(Phoenix_Final_Approvd_Pricing_Contracts__c- 
IF( Phoenix_Proposed_Per_Unit_Rebate__c =0, Phoenix_Current_Per_Unit_Rebate__c 
,Phoenix_Proposed_Per_Unit_Rebate__c ) )
*IF( Phoenix_Bid__r.Phoenix_Proposed_Value_Admin_Fee__c =0,
 Phoenix_Current_Admin_Fee__c ,Phoenix_Bid__r.Phoenix_Proposed_Value_Admin_Fee__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Admin_Fee_in__c</fullName>
        <formula>IF( Phoenix_Fee_G_N__c =&apos;Gross&apos;, IF(Phoenix_Final_Approvd_Pricing_Contracts__c =0 ,IF(Phoenix_Bid_Template_Refrence__c = &apos;Indirect&apos;, Phoenix_Current_Indirect_Price__c ,Phoenix_Current_Direct_Price__c) ,Phoenix_Final_Approvd_Pricing_Contracts__c )*Phoenix_Current_Admin_Fee__c , IF(Phoenix_Fee_G_N__c =&apos;Net&apos;,(IF(Phoenix_Final_Approvd_Pricing_Contracts__c =0 ,IF(Phoenix_Bid_Template_Refrence__c = &apos;Indirect&apos;, Phoenix_Current_Indirect_Price__c ,Phoenix_Current_Direct_Price__c),Phoenix_Final_Approvd_Pricing_Contracts__c )- IF( Phoenix_Proposed_Per_Unit_Rebate__c =0, Phoenix_Current_Per_Unit_Rebate__c ,Phoenix_Proposed_Per_Unit_Rebate__c ) )*Phoenix_Current_Admin_Fee__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Fee in $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_Admin_Fees__c</fullName>
        <description>created for RXSS template</description>
        <label>Anda Admin Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_CP_Price__c</fullName>
        <formula>Phoenix_Final_Approvd_Pricing_Contracts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anda CP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_DRL_Net_price__c</fullName>
        <description>created for RXSS template</description>
        <label>Anda DRL Net price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_DRL_TPT_Percent__c</fullName>
        <description>created for RXSS template</description>
        <label>Anda DRL TPT %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_DRL_TPT__c</fullName>
        <description>created for RXSS template</description>
        <label>Anda DRL TPT $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_Invoice_Price__c</fullName>
        <formula>Phoenix_Wholesaler_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anda Invoice Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_Net_Model_Sales__c</fullName>
        <description>created for RXSS template</description>
        <label>Anda Net Model Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_New_Model_Acqusition_Costs__c</fullName>
        <label>Anda New Model Acqusition Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_Old_Acquisition_Costs__c</fullName>
        <formula>Phoenix_Wholesaler_Price__c  - ( Phoenix_Cash_Terms__c  *  Phoenix_WAC1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anda - Old Acquisition Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_Old_Acqusition_Costs__c</fullName>
        <description>created for RXSS template</description>
        <label>Anda - Old Acqusition Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Anda_VIP__c</fullName>
        <description>created for RXSS template</description>
        <label>Anda VIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_GM_Impact__c</fullName>
        <formula>Phoenix_SSA_Hit__c +  Phoenix_DRL_Share_Impact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TP /GM Impact after PS + SSA Hit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_TP_Impact__c</fullName>
        <formula>Phoenix_Difference_Margin__c  +  Phoenix_SSA_Hit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TP /GM Impact before PS + SSA Hit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Grid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Grid</label>
        <referenceTo>Phoenix_Approval_Grid__c</referenceTo>
        <relationshipLabel>Bid Line Items</relationshipLabel>
        <relationshipName>Bid_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval__c</fullName>
        <description>this approval is used for the Approval Grid</description>
        <label>Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Approved_Lowest_Price_SKU__c</fullName>
        <label>Approved Lowest Price /SKU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Award_Position__c</fullName>
        <label>Award Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Awarded_Net_Sales__c</fullName>
        <formula>IF(Phoenix_Final_Total_Selling_Unit__c &gt; 0,
(Phoenix_Proposed_Sales__c / Phoenix_Final_Total_Selling_Unit__c )* Phoenix_Awarded_Quantity__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Awarded_Quantity__c</fullName>
        <label>Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Item_Approval_Status__c</fullName>
        <label>Bid Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Contracts Pending</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Pending</fullName>
                </value>
                <value>
                    <fullName>Customer Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service Pending</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Finance Pending</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
                <value>
                    <fullName>Management Rejected</fullName>
                </value>
                <value>
                    <fullName>Marketing Head Pending</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead OTC Rejected</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead Pending</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead Rx Rejected</fullName>
                </value>
                <value>
                    <fullName>Marketing Lead SRx Rejected</fullName>
                </value>
                <value>
                    <fullName>Marketing Pending</fullName>
                </value>
                <value>
                    <fullName>Marketing Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>SCM &amp; Marketing Pending</fullName>
                </value>
                <value>
                    <fullName>SCM Rejected</fullName>
                </value>
                <value>
                    <fullName>Sr Director or VP Finance Pending</fullName>
                </value>
                <value>
                    <fullName>Sr Director or VP Finance Rejected</fullName>
                </value>
                <value>
                    <fullName>Supply Chain Pending</fullName>
                </value>
                <value>
                    <fullName>Vistex Rejected</fullName>
                </value>
                <value>
                    <fullName>Vistex Update Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Product Family</label>
        <referenceTo>Phoenix_Bid_Line_Product_Family__c</referenceTo>
        <relationshipLabel>Bid Line Items</relationshipLabel>
        <relationshipName>Bid_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Type__c</fullName>
        <label>Bid Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Addition</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Status__c</fullName>
        <label>Bid Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>Declined by Customer</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>DRL Rescinded</fullName>
                </value>
                <value>
                    <fullName>DRL submitting under New Bid Number</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Template_Refrence__c</fullName>
        <formula>TEXT(Phoenix_Bid__r.Phoenix_Customer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Template Refrence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Bid Line Items</relationshipLabel>
        <relationshipName>Bid_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phoenix_Brand_WAC_Per__c</fullName>
        <label>Brand WAC %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Budgeted_ASP1__c</fullName>
        <label>Budgeted ASP(Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Budgeted_ASP_Q1_FY21__c</fullName>
        <label>Budgeted ASP(Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Budgeted_ASP__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_Current_Budgeted_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budgeted ASP (Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Business_Head_Approval__c</fullName>
        <label>Business Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Business_Head_Comments__c</fullName>
        <label>Marketing Lead Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_CB__c</fullName>
        <formula>Phoenix_Anda_Invoice_Price__c  -  Phoenix_Anda_CP_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CD_Per_Unit_in__c</fullName>
        <formula>Phoenix_Value_Cash_Terms__c / Phoenix_Final_Total_Selling_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CD Per Unit $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CM_FEE__c</fullName>
        <formula>IF( Phoenix_Wholesaler_Diff_Price_Indirect__c =0, Phoenix_Current_Indirect_Price__c ,Phoenix_Wholesaler_Diff_Price_Indirect__c ) *  Phoenix_Contract_Mngment_Fee_Wholesaler__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM FEE</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CM_Fee_WMT_Indirect__c</fullName>
        <label>CM Fee (WMT Indirect)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CM_Fees_Per_Unit_in__c</fullName>
        <formula>IF( Phoenix_Bid_Template_Refrence__c = &apos;Indirect&apos;,Phoenix_Current_Price_Calc__c*Phoenix_Contract_Mngment_Fee_Wholesaler__c ,IF(Phoenix_Bid_Template_Refrence__c = &apos;Direct and Indirect&apos;,IF( Phoenix_Wholesaler_Diff_Price_Indirect__c =0, IF(Phoenix_ProposedContract_Bid_Price_Sales__c=0,Phoenix_Current_Indirect_Price__c ,Phoenix_ProposedContract_Bid_Price_Sales__c),Phoenix_Wholesaler_Diff_Price_Indirect__c )*Phoenix_Contract_Mngment_Fee_Wholesaler__c ,
Phoenix_Contract_Mngment_Fee_Wholesaler__c *  Phoenix_WAC1__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM Fees Per Unit $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Case_Pack1__c</fullName>
        <label>Case Pack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Case_Pack__c</fullName>
        <formula>Phoenix_Case_Pack1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Pack (Internal Use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Discount_NPR__c</fullName>
        <label>Phoenix Cash Discount NPR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Terms_Days__c</fullName>
        <inlineHelpText>Number of Days in Cash Terms (Non-Weighted)</inlineHelpText>
        <label>#Cash Terms Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Terms_Non_Weighted__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Terms (Non-Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Terms_Price__c</fullName>
        <formula>Phoenix_Cash_Terms__c  *  Phoenix_Anda_Invoice_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Terms_RxSS__c</fullName>
        <description>created for RXSS template</description>
        <label>Cash Terms</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Terms_Weighted__c</fullName>
        <formula>( Phoenix_Final_Indirect_Selling_Units__c *  Phoenix_WAC__c *0.02)+(IF(  Phoenix_Final_Approvd_Pricing_Contracts__c =0,IF( Phoenix_Current_Direct_Price__c =0, Phoenix_Current_Indirect_Price__c , Phoenix_Current_Direct_Price__c ), Phoenix_Final_Approvd_Pricing_Contracts__c)*  Phoenix_Final_Direct_Selling_Units__c *0.02)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Terms (Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_Terms__c</fullName>
        <label>Cash Terms %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Cash_terms_Proposed_McK_OS_RAD__c</fullName>
        <formula>IF(Phoenix_Cash_Discount_NPR__c &gt; 0 , Phoenix_Cash_Discount_NPR__c, Phoenix_Bid__r.Phoenix_Customer__r.Phoenix_Cash_Discount__c)*  Phoenix_WAC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash terms (Proposed McK OS + RAD)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Charge_Back__c</fullName>
        <description>created for RxSS template</description>
        <label>Charge Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Check_Indirect_Net_less_than_Ind__c</fullName>
        <formula>If(Phoenix_Bid_Template_Refrence__c==&apos;RXSS&apos; , IF(Phoenix_Retail_Indirect_Net__c&lt; Phoenix_Retail_Indirect_Price__c,&apos;0&apos;,&apos;check&apos;),IF(Phoenix_Retail_Indirect_Net__c &lt; Phoenix_Wholesaler_Diff_Price_Indirect__c ,&apos;0&apos;,&apos;Check&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Indirect Net less than Indirect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comm_Exps1__c</fullName>
        <label>Comm. Exps %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comm_Exps__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_Comm_Exps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comm. Exps % (Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Commercial_Cost__c</fullName>
        <formula>Phoenix_Internal_Dead_Net_Price__c  *  Phoenix_Comm_Exps1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Compare_To_Brand_Name1__c</fullName>
        <label>Compare To (Brand Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Compare_to_Brand_Name__c</fullName>
        <formula>Phoenix_Product__r.Phoenix_Compare_to_Brand_Name__c</formula>
        <label>Compare to (Brand Name Internal Use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Conditional_Approval_Req_for_Flo__c</fullName>
        <formula>if(and(or(Phoenix_IPA_Floor_Price1__c == null,Phoenix_Proposed_IPA_Price__c&gt;0,Phoenix_Proposed_IPA_Price__c &lt; Phoenix_IPA_Floor_Price1__c )),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditional Approval Req for Floor Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contr_Management_Fee_Wholesaler__c</fullName>
        <formula>IF(Phoenix_Bid_Template_Refrence__c =&apos;Direct and Indirect&apos;,
IF(Phoenix_Wholesaler_Diff_Price_Indirect__c=0,Phoenix_Final_Approvd_Pricing_Contracts__c,Phoenix_Wholesaler_Diff_Price_Indirect__c) ,Phoenix_Final_Approvd_Pricing_Contracts__c)
* Phoenix_Contract_Mngment_Fee_Wholesaler__c * Phoenix_Final_Indirect_Selling_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM Fee (Wholesaler Internal Use)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Approval__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Line Error- Not Sent</fullName>
                </value>
                <value>
                    <fullName>Sent to Vistex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Comments__c</fullName>
        <label>Contract Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Mngment_Fee_Wholesaler__c</fullName>
        <label>Contract Management Fee (Wholesaler) %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Mngmnt_Fee_Wholesaler__c</fullName>
        <label>Contract Management Fee (Wholesaler)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Bid Line Items</relationshipLabel>
        <relationshipName>Bid_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts  Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Costco_TPTPer__c</fullName>
        <label>Costco TPT %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>